--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
-    "syncpack": "^14.0.0-alpha.18"
+    "syncpack": "^14.0.0-alpha.18",
+    "turbo": "^2.5.4"
   },
   "packageManager": "pnpm@10.13.1"
 }
