--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "description": "The platform to discover, showcase, and collaborate on open source projects",
+  "type": "module",
   "scripts": {
     "pre-commit": "lint-staged",
     "prepare": "husky",
@@ -18,11 +19,17 @@
     "syncpack:update-patch": "syncpack update --target patch"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@types/node": "^24.0.13",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "syncpack": "^14.0.0-alpha.18",
-    "turbo": "^2.5.4"
+    "turbo": "^2.5.4",
+    "typescript": "^5.8.3"
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "engines": {
+    "node": ">=20"
+  }
 }
