--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "exports": {
     "./globals.css": "./src/styles/globals.css",
-    "./components/*": "./src/components/*.tsx"
+    "./components/*": "./src/components/*.tsx",
+    "./postcss.config": "./postcss.config.mjs"
   },
   "scripts": {
     "check-types": "tsc --noEmit"
@@ -17,9 +18,12 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   }
 }
