--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "turbo build",
+    "clean": "turbo clean",
     "commitlint": "commitlint --edit",
     "dev": "turbo dev",
     "lint": "turbo lint",
