--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -9,7 +9,8 @@
     "./postcss.config": "./postcss.config.mjs"
   },
   "scripts": {
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "clean": "rm -rf .turbo node_modules"
   },
   "dependencies": {
     "react": "^19.1.0",
