--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -12,10 +12,6 @@
     "check-types": "tsc --noEmit",
     "clean": "rm -rf .turbo node_modules"
   },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
@@ -26,5 +22,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "next": "^15.3.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
