chore: add tailwindcss extension recommendation to .vscode

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
-    "esbenp.prettier-vscode", // prettier plugin
-    "dbaeumer.vscode-eslint" // eslint plugin
+    "esbenp.prettier-vscode", // prettier
+    "dbaeumer.vscode-eslint", // eslint
+    "bradlc.vscode-tailwindcss" // tailwindcss
   ]
 }
