chore: setup syncpack to format package.json files correctly when staged

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prettier:format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "syncpack:check": "pnpm syncpack:format-check && pnpm syncpack:lint && pnpm syncpack:update-check",
     "syncpack:fix": "syncpack fix",
-    "syncpack:format": "syncpack format",
+    "syncpack:fix:format": "syncpack format",
+    "syncpack:fix:format-safe": "syncpack format || true",
     "syncpack:format-check": "syncpack format --check",
     "syncpack:lint": "syncpack lint",
     "syncpack:update-check": "syncpack update --check",
