--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "clean": "turbo clean",
     "commitlint": "commitlint --edit",
     "dev": "turbo dev",
+    "dev:web": "turbo dev --filter=@osspages/web",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
     "pre-commit": "lint-staged",
     "prepare": "husky",
     "prettier:format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "start:web": "turbo start --filter=@osspages/web",
     "syncpack:check": "pnpm syncpack:format-check && pnpm syncpack:lint && pnpm syncpack:update-check",
     "syncpack:fix": "syncpack fix",
     "syncpack:fix:format": "syncpack format",
@@ -29,8 +31,8 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/types": "^19.8.1",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@osspages/eslint-config": "workspace:*",
+    "@osspages/typescript-config": "workspace:*",
     "@types/node": "^24.0.13",
     "eslint": "^9.31.0",
     "husky": "^9.1.7",
