--- a/packages/security/package.json
+++ b/packages/security/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/security",
+  "name": "@osspages/security",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -14,7 +14,7 @@
     "@nosecone/next": "1.0.0-beta.9"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
+    "@osspages/typescript-config": "workspace:*",
     "typescript": "^5.8.3"
   }
 }
