--- a/turbo.json
+++ b/turbo.json
@@ -20,6 +20,9 @@
       "cache": false,
       "persistent": true
     },
+    "start": {
+      "cache": false
+    },
     "clean": {
       "cache": false
     }
