--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "@repo/typescript-config/reactjs.json",
+  "extends": "@osspages/typescript-config/reactjs.json",
   "compilerOptions": {
     "rootDir": "src",
     "baseUrl": ".",
     "paths": {
-      "@repo/design-system/*": ["./src/*"]
+      "@osspages/design-system/*": ["./src/*"]
     }
   },
   "include": ["src"],
