--- a/packages/security/tsconfig.json
+++ b/packages/security/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "extends": "@repo/typescript-config/nextjs.json",
+  "extends": "@osspages/typescript-config/nextjs.json",
   "compilerOptions": {
     "baseUrl": "."
   },
   "include": ["src"],
   "exclude": ["node_modules"],
   "paths": {
-    "@repo/security/*": ["./src/*"]
+    "@osspages/security/*": ["./src/*"]
   }
 }
